samples/_failures_safe/1761088091_922aad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cdb85286.c: In function ‘main’:
./samples/SAFE/__tmp_cdb85286.c:175:5: error: expected declaration or statement at end of input
  175 |     int choice = atoi(choice_str);
      |     ^~~
